3. Changed the default behavior of `examples/run.sh` to running scenario D.
4. Fixed the runtime error when home.path exists but the pointed main.config is
missing. Now will regenerate `main.config` at the pointed location.
5. Fixed `--bypass-setup` not working as True by default. Now will always create
the config path at `~/.witch/main.config`. 

### WITCH v1.0.6
1. Added Software Output Explanation to the README to avoid confusion on what
alignment file to use for downstream analyses.

### WITCH v1.0.5
1. Added compatibility to Dendropy with version >4.5.2 and removed its requirement
from requirements.txt for pip.

### WITCH v1.0.5b
1. Added a new parameter option allowing users to specify a customized config
file to override the default `main.config` (usually can be found at
`~/.witch_msa/main.config`). Use `-c <user config file>` to do so. The priority
for arguments: `commandline > user.config > main.config`.

### WITCH v1.0.5a
1. Added two sanity checks to HMMBuild and HMMSearch jobs: making sure all files
are created correctly before proceeding.
2. Added a file number check utility function using the `inspect` package.

### WITCH v1.0.4
1. Added an additional parameter option to set an upper bound to the HMM subsets
created (`-Z`, complementary to `-A` which is for lower bound), based on the
number of sequences in a subset.
2. Changed the behavior for creating HMM subsets. Instead of reading in the
backboen alignment at once, WITCH now reads line by line to avoid large memory
consumption if the backbone is very large.
3. Changed the behavior for running HMMSearch. Now also uses my task manager to
manage the maximum amount of concurrently running jobs (instead of submitting
all at once).

### WITCH v1.0.3
1. Fixed an oversight in memory issue if the backbone alignment is large and
we are creating a lot of subsets (`gcmm/algorithm.py`).
2. Added default behavior to function `gcmm/task.py/handleFuture(...)` so that